@@ -18,11 +18,12 @@ set -e
 LISTEN="0.0.0.0"
 PORT="5001"
 RFSD_USER="root"
+PIDFILE="/var/run/rfsd.pid"
 
 case "$1" in
 	start)
 		log_daemon_msg "Starting rfsd"
-		if start-stop-daemon --start --quiet --oknodo --pidfile /var/run/rfsd.pid --exec /usr/bin/rfsd -- -a ${LISTEN} -p ${PORT} -u ${RFSD_USER}; then 
+		if start-stop-daemon --start --quiet --oknodo --pidfile /var/run/rfsd.pid --exec /usr/bin/rfsd -- -a ${LISTEN} -p ${PORT} -u ${RFSD_USER} -r ${PIDFILE}; then 
 			log_end_msg 0
 		else
 			log_end_msg 1
@@ -38,6 +39,10 @@ case "$1" in
 		;;
 	restart)
 		stop
+		start
+		;;
+	reload)
+		kill -s HUP `cat ${PIDFILE}`
 		start
 		;;
 	*)
