@@ -3,7 +3,6 @@
 
 #include <signal.h>
 
-void install_signal_handler(int signal, void (*signal_proc)(int , siginfo_t *, void *));
-void reset_signal_handler(int signal);
+void install_signal_handler(int sig, void (*signal_proc)(int , siginfo_t *, void *));
 
 #endif // SIGNALS_H
