@@ -23,34 +23,27 @@ void signal_handler_server(int signal, siginfo_t *sig_info, void *ucontext_t_cas
 		}
 		break;
 	
+	case SIGHUP:
 	case SIGTERM:
+	case SIGINT:
 		stop_server();
 		exit(0);
 		
 	case SIGALRM:
 		check_keep_alive();
 		break;
+		
+	case SIGPIPE:
+		break;
 	}
 }
 
-void install_signal_handlers_worker()
+void install_signal_handlers()
 {
 	install_signal_handler(SIGCHLD, signal_handler_server);
 	install_signal_handler(SIGTERM, signal_handler_server);
+	install_signal_handler(SIGINT, signal_handler_server);
 	install_signal_handler(SIGALRM, signal_handler_server);
-}
-
-void install_signal_handlers_server()
-{
-	install_signal_handlers_worker();
-	
+	install_signal_handler(SIGPIPE, signal_handler_server);
 	install_signal_handler(SIGHUP, signal_handler_server);
-}
-
-void reset_signal_handlers()
-{
-	reset_signal_handler(SIGCHLD);
-	reset_signal_handler(SIGTERM);
-	reset_signal_handler(SIGALRM);
-	reset_signal_handler(SIGHUP);
 }
