@@ -1,8 +1,6 @@
 #ifndef SIGNALS_SERVER_H
 #define SIGNALS_SERVER_H
 
-void install_signal_handlers_worker();
-void install_signal_handlers_server();
-void reset_signal_handlers();
+void install_signal_handlers();
 
 #endif // SIGNALS_SERVER_H
